feat: docker wip in backend

--- a/backend/recipes/src/application.properties
+++ b/backend/recipes/src/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=kp-dev.user-management
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/kp_auth_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/kp_recipe_db
 spring.datasource.username=kpdev
 spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migration
 
 server.error.include-stacktrace=never
